hidden and floating button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div class="bar-4"></div>
 
     <!-- Begin of menu icon toggler -->
-    <button class="navbar-toggler site-menu-icon" id="navMenuIcon">
-        <!-- Available class : menu-icon-dot / menu-icon-thick /menu-icon-random -->
+    <button class="navbar-toggler site-menu-icon" id="navMenuIcon">Click
         <span class="menu-icon menu-icon-normal">
             <span class="bars">
                 <span class="bar1"></span>
