hidden\show menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Daniel Carmel</title>
+    <link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
@@ -15,18 +16,14 @@
     <div class="bar-4"></div>
 
     <!-- Begin of menu icon toggler -->
-    <button class="navbar-toggler site-menu-icon" id="navMenuIcon">Click
-        <span class="menu-icon menu-icon-normal">
-            <span class="bars">
-                <span class="bar1"></span>
-                <span class="bar2"></span>
-                <span class="bar3"></span>
-            </span>
+    <button id="navMenuIcon" class="hamburger hamburger--elastic" type="button">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
         </span>
     </button>
     <!-- End of menu icon toggler -->
 
-    <!-- Begin of hamburger mainmenu menu -->
+    <!-- Begin of mainmenu -->
     <div class="all-menu-wrapper" id="navbarMenu">
         <nav class="navbar-mainmenu">
             <ul class="navbar-nav mr-auto">
@@ -45,7 +42,7 @@
             </ul>
         </nav>
     </div>
-    <!-- End of hamburger mainmenu menu -->
+    <!-- End of mainmenu -->
 
     <!--Home section-->
     <section id="home" class="fade-tall">
