removed some html unnessecary classes

--- a/index.html
+++ b/index.html
@@ -24,24 +24,22 @@
     <!-- End of menu icon toggler -->
 
     <!-- Begin of mainmenu -->
-    <div class="all-menu-wrapper" id="navbarMenu">
-        <nav class="navbar-mainmenu">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a id="bar-home" class="nav-link" href="#home">home</a>
-                </li>
-                <li class="nav-item">
-                    <a id="bar-about" class="nav-link" href="#about">about</a>
-                </li>
-                <li class="nav-item">
-                    <a id="bar-projects" class="nav-link" href="#projects">projects</a>
-                </li>
-                <li class="nav-item">
-                    <a id="bar-contact" class="nav-link" href="#contact">contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <nav id="navbarMenu">
+        <ul>
+            <li>
+                <a id="bar-home" href="#home">home</a>
+            </li>
+            <li>
+                <a id="bar-about" href="#about">about</a>
+            </li>
+            <li>
+                <a id="bar-projects" href="#projects">projects</a>
+            </li>
+            <li>
+                <a id="bar-contact" href="#contact">contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- End of mainmenu -->
 
     <!--Home section-->
