--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Daniel Carmel</title>
-    <link rel="stylesheet" type="text/css" href="css/hamburger.css"/>
+    <link rel="stylesheet" type="text/css" href="css/hamburger.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
+
 <body>
     <!-- progress bar -->
     <div class="bar-1"></div>
@@ -24,22 +26,14 @@
     <!-- End of menu icon toggler -->
 
     <!-- Begin of mainmenu -->
-    <nav id="navbarMenu">
-        <ul>
-            <li>
-                <a id="bar-home" href="#home">home</a>
-            </li>
-            <li>
-                <a id="bar-about" href="#about">about</a>
-            </li>
-            <li>
-                <a id="bar-projects" href="#projects">projects</a>
-            </li>
-            <li>
-                <a id="bar-contact" href="#contact">contact</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="overlay">
+        <div id="navbarMenu" class="overlay-content">
+            <a id="bar-home" href="#home">Home</a>
+            <a id="bar-about" href="#about">About</a>
+            <a id="bar-projects" href="#projects">Projects</a>
+            <a id="bar-contact" href="#contact">Contact</a>
+        </div>
+    </div>
     <!-- End of mainmenu -->
 
     <!--Home section-->
@@ -67,7 +61,8 @@
         <h1>contact</h1>
     </section>
 
-    <script src="js/jquery-3.3.1.min.js" ></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
