--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
     </div>
     <!-- End of mainmenu -->
 
-    <!--Home section-->
-    <section id="home" class="fade-tall">
-        <br/>
-        <h1>Home</h1>
-        <!--<p class="line-1 anim-typewriter">Animation typewriter style using css steps()</p>-->
-    </section>
+    <div class="doScroller">
+        <!--Home section-->
+        <section id="home" class="">
+            <br/>
+            <h1>Home</h1>
+        </section>
 
-    <!-- About section-->
-    <section id="about" class="fade-tall">
-        <br/>
-        <h1>About</h1>
-    </section>
+        <!-- About section-->
+        <section id="about" class="">
+            <br/>
+            <h1>About</h1>
+        </section>
 
-    <!-- Projects section-->
-    <section id="projects" class="fade-tall">
-        <br/>
-        <h1>Projects</h1>
-    </section>
+        <!-- Projects section-->
+        <section id="projects" class="">
+            <br/>
+            <h1>Projects</h1>
+        </section>
 
-    <!-- Contact section-->
-    <section id="contact" class="fade-tall">
-        <br/>
-        <h1>contact</h1>
-    </section>
-
+        <!-- Contact section-->
+        <section id="contact" class="">
+            <br/>
+            <h1>contact</h1>
+        </section>
+    </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
