try to move smoothly - failure for now

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- End of mainmenu -->
 
-    <div class="doScroller">
+    <div id="sections" class="doScroller">
         <!--Home section-->
         <section id="home" class="">
             <br/>
@@ -62,6 +62,7 @@
         </section>
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.smartresizeandscroll.js"></script>
     <script src="js/main.js"></script>
 </body>
 
