--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </section>
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/underscore.js"></script>
     <script src="js/jquery.smartresizeandscroll.js"></script>
     <script src="js/main.js"></script>
 </body>
