--- a/index.html
+++ b/index.html
@@ -10,28 +10,27 @@
 </head>
 
 <body>
-    <div id="sections" class="doScroller"></div>
+    <a href="index.html">
+        <img src="img/logo2.png" id="logo" alt="Logo">
+    </a>
     <!--Home section-->
     <section id="home1" data-section-name="home" class="panel home">
-        <h1>Home</h1>
+        <video autoplay loop muted>
+            <source src="img/coding.webm" type="video/webm">
+            <source src="img/coding.mp4" type="video/mp4">
+        </video>
     </section>
 
     <!-- About section-->
     <section id="about2" data-section-name="about" class="panel about">
-        <br />
-        <h1>About</h1>
     </section>
 
     <!-- Projects section-->
     <section id="projects3" data-section-name="projects" class="panel projects">
-        <br />
-        <h1>Projects</h1>
     </section>
 
     <!-- Contact section-->
     <section id="contact4" data-section-name="contact" class="panel contact">
-        <br />
-        <h1>contact</h1>
     </section>
     </div>
     <!-- progress bar -->
