--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
             <source src="img/coding.webm" type="video/webm">
             <source src="img/coding.mp4" type="video/mp4">
         </video>
+
+
+        <form action="/submit" method="POST">
+            First Name: <input name="firstName" type="text" /> <br />
+            Last Name: <input name="lastName" type="text" /> <br />
+            <input type="submit" />
+        </form>
+
+
     </section>
 
     <!-- About section-->
