added home text + cool popping in

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Daniel Carmel</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/home.css" />
 </head>
 
 <body>
@@ -17,8 +18,13 @@
     <section id="home1" data-section-name="home" class="panel home">
         <video autoplay loop muted>
             <source src="img/coding.webm" type="video/webm">
-            <source src="img/coding.mp4" type="video/mp4">
         </video>
+        <div class="wrapper">
+            <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span><span class="letter"> </span><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span class="letter">r</span></div>
+            <div><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
+            <div><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
+            <div><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
+        </div>
     </section>
 
     <!-- About section-->
