--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,17 @@
         <video autoplay loop muted>
             <source src="img/coding.webm" type="video/webm">
         </video>
-        <div class="wrapper">
+        <!-- Home page desktop -->
+        <div class="wrapperDesktop">
             <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span><span class="letter"> </span><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span class="letter">r</span></div>
+            <div class="letters"><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
+            <div class="letters"><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
+            <div class="letters"><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
+        </div>
+        <!-- Home page mobile -->
+        <div class="wrapperMobile">
+            <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span></div>
+            <div><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span class="letter">r</span></div>
             <div><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
             <div><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
             <div><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
