--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Daniel Carmel</title>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
+    <link rel="stylesheet" type="text/css" href="css/about.css" />
 </head>
 
 <body>
@@ -21,23 +22,36 @@
         </video>
         <!-- Home page desktop -->
         <div class="wrapperDesktop">
-            <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span><span class="letter"> </span><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span class="letter">r</span></div>
-            <div class="letters"><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
-            <div class="letters"><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
-            <div class="letters"><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
+            <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span><span
+                    class="letter"> </span><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span
+                    class="letter">r</span></div>
+            <div class="letters"><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span
+                    class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
+            <div class="letters"><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span
+                    class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span
+                    class="letter">e</span></div>
+            <div class="letters"><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span
+                    class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span
+                    class="letter">r</span></div>
         </div>
         <!-- Home page mobile -->
         <div class="wrapperMobile">
             <div class="letters"><span class="letter">N</span><span class="letter">o</span><span class="letter">t</span></div>
             <div><span class="letter">y</span><span class="letter">o</span><span class="letter">u</span><span class="letter">r</span></div>
-            <div><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span class="letter">g</span><span class="letter">e</span></div>
-            <div><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
-            <div><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
+            <div><span class="letter">a</span><span class="letter">v</span><span class="letter">r</span><span class="letter">a</span><span
+                    class="letter">g</span><span class="letter">e</span></div>
+            <div><span class="letter">s</span><span class="letter">o</span><span class="letter">f</span><span class="letter">t</span><span
+                    class="letter">w</span><span class="letter">a</span><span class="letter">r</span><span class="letter">e</span></div>
+            <div><span class="letter">e</span><span class="letter">n</span><span class="letter">g</span><span class="letter">i</span><span
+                    class="letter">n</span><span class="letter">e</span><span class="letter">e</span><span class="letter">r</span></div>
         </div>
+        <div id="messenger"></div>
     </section>
 
     <!-- About section-->
     <section id="about2" data-section-name="about" class="panel about">
+        <div class="aboutContent"></div>
+        <canvas id="matrix"></canvas>
     </section>
 
     <!-- Projects section-->
@@ -67,6 +81,8 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.scrollify.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/about.js"></script>
+    <script src="js/home.js"></script>
 </body>
 
 </html>
