changed contact section a bit

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
     <link rel="stylesheet" type="text/css" href="css/about.css" />
+    <link rel="stylesheet" type="text/css" href="css/contact.css"/>
 </head>
 
 <body>
@@ -60,7 +61,7 @@
 
     <!-- Contact section-->
     <section id="contact4" data-section-name="contact" class="panel contact">
-        <form method="POST" action="https://formspree.io/danielcarmel6@gmail.com">
+        <form class="form" method="POST" action="https://formspree.io/danielcarmel6@gmail.com">
             <input type="text" id="name" name="name" placeholder="Your name">
             <input type="email" name="email" placeholder="Your email">
             <label for="summary">Project Summary</label>
@@ -73,6 +74,8 @@
             </select>
             <button type="submit">Send</button>
         </form>
+
+        <div class="overlay"></div>
     </section>
     </div>
     <!-- progress bar -->
