addded background  to projects page

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
     <link rel="stylesheet" type="text/css" href="css/about.css" />
-    <link rel="stylesheet" type="text/css" href="css/contact.css"/>
+    <link rel="stylesheet" type="text/css" href="css/contact.css" />
+    <link rel="stylesheet" type="text/css" href="css/projects.css" />
 </head>
 
 <body>
@@ -57,6 +58,7 @@
 
     <!-- Projects section-->
     <section id="projects3" data-section-name="projects" class="panel projects">
+        <div class="particle-network-animation"></div>
     </section>
 
     <!-- Contact section-->
@@ -86,6 +88,7 @@
     <script src="js/main.js"></script>
     <script src="js/about.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/projects.js"></script>
 </body>
 
 </html>
